5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_2896.log
== TEST (2019-03-14 00:22:41) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var = input

# Impressao de saidas
print(var)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:22:50) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var = input

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.170551
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
<built-in function input>
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:23:02) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var =phyton

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =phyton
NameError: name 'phyton' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:23:03) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var =phyton

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =phyton
NameError: name 'phyton' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:23:05) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var =phyton

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.148902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 4, in <module>
    var =phyton
NameError: name 'phyton' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:23:28) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var =input("phyton")

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:23:29) 
-- CODE:
var=input("phyton")

# Leitura de valores de entrada
var =input("phyton")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.146627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 4, in <module>
    var =input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:24:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("phyton")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:24:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("phyton")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.150231
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:28:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:29:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.19053
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:44:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:44:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.184945
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:15:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:16:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.20339
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:46:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.153061
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
